# custom-lang

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Custom Language/: CMakeLists.txt
Custom Language/include/: ast.hpp  codegen.hpp  colors.hpp  error_handler.hpp  gc.hpp  lexer.hpp  parser.hpp  runtime.hpp
Custom Language/src/: ast.cpp  codegen.cpp  gc.cpp  lexer.cpp  main.cpp  parser.cpp  runtime.cpp
Custom Language/tests/: test.awara
